# eomt

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/dinov2/ade20k/panoptic/: eomt_giant_1280.yaml  eomt_giant_640.yaml  eomt_large_1280.yaml  eomt_large_640.yaml
configs/dinov2/ade20k/semantic/: eomt_large_512.yaml
configs/dinov2/cityscapes/semantic/: eomt_large_1024.yaml
configs/dinov2/coco/instance/: eomt_large_1280.yaml  eomt_large_640.yaml
configs/dinov2/coco/panoptic/: eomt_base_640.yaml  eomt_base_640_2x.yaml  eomt_giant_1280.yaml  eomt_giant_640.yaml  eomt_large_1280.yaml  eomt_large_640.yaml  eomt_small_640.yaml  eomt_small_640_2x.yaml
configs/dinov3/ade20k/semantic/: eomt_large_512.yaml
configs/dinov3/coco/instance/: eomt_large_1280.yaml  (+1 more)
datasets/: base.py  coco_instance.py  dataset.py  lightning_data_module.py  transforms.py  zip_dataset.py
dinov3/distributed/: torch_distributed_wrapper.py
dinov3/eval/: data.py  helpers.py  knn.py  linear.py  log_regression.py  setup.py  utils.py
dinov3/eval/depth/: config.py  eval.py  loss.py  metrics.py  run.py  schedulers.py  train.py  transforms.py  utils.py
dinov3/eval/detection/: config.py
dinov3/eval/segmentation/: config.py  inference.py  loss.py  metrics.py  run.py  schedulers.py  transforms.py
dinov3/eval/text/: ac_comp_parallelize.py  dinotxt_model.py  tokenizer.py
dinov3/hub/: backbones.py  classifiers.py  depthers.py  detectors.py  segmentors.py
dinov3/layers/: block.py  patch_embed.py  rope_position_encoding.py
dinov3/logging/: __init__.py
dinov3/models/: convnext.py
dinov3/utils/: custom_callable.py  utils.py
logs/coco_instance_eomt_large_640_dinov3/version_1/: hparams.yaml
models/: __init__.py  eomt.back.py  eomt.old.py  eomt.py  eomt_dinov3.py  official_eomt.py  original_eomt.py  scale_block.py  utils.py  vit.py
models/dinov3/layers/: attention.py
models/dinov3/models/: __init__.py  vision_transformer.py
models/dinov3/utils/: utils.py
scripts/: train_coco_instance.py  train_mask_residual_box_head.py  utils.py
tests/: test_base_module.py  test_cli.py  test_mask_residual_box_head_cli.py  test_runtime.py  train_coco_instance.py
training/: base_module.py  checkpointing.py  csv_logger.py  engine.py  instance_module.py  lightning_module.py  loss.py  mask_classification_instance.py  mask_classification_loss.py  mask_classification_panoptic.py  mask_classification_semantic.py  runtime.py
(+12 files in other folders)
