[project]
name = "eomt"
version = "0.1.0"
description = "Encoder-only Mask Transformer (EoMT)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "gitignore_parser==0.1.12",
    "jsonargparse[signatures]==4.38",
    "matplotlib==3.10.1",
    "timm==1.0.15",
    "wandb==0.19.10",
    "lightning==2.5.1.post0",
    "transformers==4.56.1",
    "scipy==1.15.2",
    "torch==2.7.0+cu126",
    "torchvision==0.22.0+cu126",
    "ipykernel==6.29.5",
    "fvcore==0.1.5.post20221221",
    "torchmetrics==1.7.1",
    "pycocotools==2.0.8",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true