[project]
name = "eomt"
version = "0.1.0"
description = "Encoder-only Mask Transformer (EoMT)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "matplotlib==3.10.1",
    "timm==1.0.15",
    "transformers==4.56.1",
    "scipy==1.15.2",
    "torch==2.10.0+cu126",
    "torchvision==0.25+cu126",
    "ipykernel==6.29.5",
    "fvcore==0.1.5.post20221221",
    # use stable branch until 1.9.0 is on PyPI
    "torchmetrics @ git+https://github.com/Lightning-AI/torchmetrics.git@release/stable",
    "pycocotools>=2.0.11",
    'triton-windows>=3.6; platform_system=="Windows"',
    'triton>=3.6; platform_system!="Windows"',
    "opencv-python>=4.13.0.92",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipython",
]
