[project]
name = "eomt"
version = "0.1.0"
description = "Encoder-only Mask Transformer for image segmentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fvcore==0.1.5.post20221221",
    "gitignore_parser==0.1.12",
    "jsonargparse[signatures]==4.38",
    "lightning==2.5.1.post0",
    "matplotlib==3.10.1",
    "pycocotools==2.0.8",
    "scipy==1.15.2",
    "timm==1.0.15",
    "torch==2.7.0",
    "torchmetrics==1.7.1",
    "torchvision==0.22.0",
    "transformers==4.56.1",
    "wandb==0.19.10",
]

[dependency-groups]
dev = [
    "ipykernel==6.29.5",
]
